<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center|top">
    <com.example.shopmall.framework.customView.CustomTitleBar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:isRightTextShow="false"
            app:leftImageId="@drawable/back"
            app:rightImageId="@drawable/dot"
            app:titleText="@string/titleBarText"
            android:id="@+id/customTitleBar"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center|top"
                  android:layout_marginTop="@dimen/dp50">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:background="@color/gray"/>
        <ImageView
                android:id="@+id/detailsFigure"
                android:layout_width="@dimen/dp250"
                android:layout_height="@dimen/dp170"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:textSize="@dimen/sp12"
                android:id="@+id/detailsName"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/details_date"
                android:textSize="@dimen/sp12"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dp10"
                android:textColor="@color/red"
                android:textSize="@dimen/sp15"
                android:id="@+id/detailsPrice"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:background="@color/white"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="@dimen/dp50"
                    android:layout_height="30dp"
                    android:text="@string/details_deliver_goods"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/sp10"
                    android:textColor="@color/black"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textColor="@color/red"
                    android:text="@string/details_shop_name"/>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp5"
                android:background="@color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="请选择款式"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp5"
                android:background="@color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:paddingLeft="@dimen/sp5"
                android:textSize="@dimen/sp11"
                android:textColor="@color/black"
                android:text="@string/details_hint"
                android:paddingBottom="@dimen/sp5"
                android:paddingTop="@dimen/sp5"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp5"
                android:background="#EEEAEA"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:gravity="center"
                android:text="@string/details_map_title"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/red"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="50dp"
    android:layout_alignParentBottom="true" android:orientation="horizontal">
        <TextView
                android:id="@+id/shortCarNum"
                android:layout_width="0dp" android:layout_height="match_parent"
        android:layout_weight="1"
                android:textSize="@dimen/sp20"
                android:textColor="@color/red"
        android:gravity="center"/>
        <Button android:layout_width="100dp" android:layout_height="match_parent"
        android:id="@+id/addShopCarBtn"
        android:text="添加购物车"
                android:textColor="@color/white"
        android:background="@color/red"/>
    </LinearLayout>
    <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
    />
</RelativeLayout>